# drone_with_mavsdk

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES  add_plates.py  license_plates.db  offboard_navigation.py  requirements.txt  使用git传输文件.md  技术文档.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aruco_tracker/share/aruco_tracker/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cv_bridge/share/cv_bridge/: local_setup.sh  package.sh
install/drone_control/share/drone_control/: package.sh
install/drone_control_interfaces/share/drone_control_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/image_geometry/share/image_geometry/: local_setup.sh  package.sh
install/opencv_tests/share/opencv_tests/: package.sh
install/pid_test/share/pid_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/plate_detection/share/plate_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  typing_patch.py
install/plate_detection/share/plate_detection/cmake/: plate_detectionConfig.cmake
install/plate_detection/share/plate_detection/config/: plate_detection_params.yaml
install/plate_detection/share/plate_detection/launch/: plate_detection.launch.py
install/plate_detection/share/plate_detection/models/: experimental.py
install/vision_opencv/share/vision_opencv/: local_setup.sh  package.sh
log/: latest_build
services/: requirements.txt  使用git传输文件.md
src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  CMakeLists.txt  README.md  package.xml
src/aruco_tracker/cfg/: params.yaml
src/aruco_tracker/launch/: aruco_tracker.launch.py  gazebo_aruco_tracker.launch.py  real_aruco_tracker.launch.py
src/drone_control/: CMakeLists.txt  PRECISION_LANDING_SUMMARY.md  README.md  package.xml  setup.cfg  setup.py
src/drone_control/backup/: attitude.py  hybrid_navigation.py  ocr_node.py  precision_land.py  test_image_ocr.py
src/drone_control/config/: d435_bridge.yaml
src/drone_control/drone_control/: __init__.py  drone_control_node.py
src/drone_control/drone_control/SQLite/: README.md  __init__.py  add_plates.py  license_plate_database.py  license_plate_process.py
src/drone_control/drone_control/confirm_license/: __init__.py  confirm_license_controller.py  confirm_license_nodes.py
src/drone_control/drone_control/core/: __init__.py  drone_state.py  hybrid_navigation.py  license_plate.py  mavsdk_control.py  offboard_navigation.py  precision_land.py  status_monitor.py
src/drone_control/drone_control/fsm/: __init__.py  controller_base.py  controller_base_state.py  state_machine.py  state_node.py
src/drone_control/drone_control/manager/: logger_manager.py
src/drone_control/drone_control/pid_test/: pid_tuner.py
src/drone_control/drone_control/precision_land/: __init__.py  precision_land_controller.py  precision_land_nodes.py
src/drone_control/drone_control/services/: __init__.py  confirm_position.py  hybrid_navigation.py  mavsdk.py  mavsdk_control.py  offboard_navigation.py  precision_land_body.py
src/drone_control/drone_control/utils/: ArucoTag.py  ArucoTagProcessor.py  Arucotag.py  AutoTuner.py  SimpleMissionItem.py  __init__.py  debug_utils.py  enum_control.py  utils.py
src/drone_control/interface/: LicenseInfo.srv  Pos.srv
src/drone_control/launch/: README.md  drone_control.launch.py  drone_plate_detection.launch.py
src/drone_control/scripts/: drone_control_node  test_offboard_mode.py
src/drone_control/test/: test_integration.py  test_precision_land.py
src/drone_control_interfaces/: CMakeLists.txt  README.md  package.xml
src/drone_control_interfaces/interface/: LicenseInfo.msg  LicenseInfo.srv  Nav.srv  Pos.srv
src/log/: latest_list
src/pid_test/: package.xml  setup.cfg  setup.py
src/pid_test/launch/: pid_tuner.launch.py
src/pid_test/pid_test/: pid_tuner_node.py
src/pid_test/pid_test/core/: __init__.py  drone_state.py  status_monitor.py
src/plate_detection/: CMakeLists.txt  DATASET_GENERATION.md  ORANGE_PI_AI_PRO_DEPLOYMENT.md  README.md  RGBD_GUIDE.md  TRAINING_GUIDE.md  convert_to_om.py  export_to_onnx.py  generate_plates.py  onnx_inference.py  package.xml  preview_plates.py  quick_start_training.sh  setup.cfg  setup.py  setup_training.py  train_doorplate.py  typing_patch.py  verify_dataset.py  visualize_plate.py
src/plate_detection/config/: plate_detection_params.yaml
src/plate_detection/data/: doorplate.yaml
src/plate_detection/launch/: plate_detection.launch.py
src/plate_detection/models/: experimental.py  yolo.py
src/plate_detection/onnx_models/: plate_detect.onnx  plate_rec_color.onnx  plate_rec_color_optimized.onnx
src/plate_detection/plate_detection/: __init__.py  plate_detection_node.py  simple_plate_detection_node.py
src/plate_detection/plate_recognition/: plateNet.py  plate_rec.py
src/plate_detection/scripts/: plate_detection_node
src/plate_detection/utils/: autoanchor.py  cv_puttext.py  general.py  google_utils.py  metrics.py
src/vision_opencv/: LICENSE-BSD  README.md
src/vision_opencv/cv_bridge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/vision_opencv/cv_bridge/cmake/: cv_bridge-extras.cmake.in
src/vision_opencv/cv_bridge/doc/: conf.py
src/vision_opencv/cv_bridge/src/: CMakeLists.txt  cv_bridge.cpp  cv_mat_sensor_msgs_image_type_adapter.cpp  module.cpp  module.hpp  module_opencv4.cpp  pycompat.hpp  rgb_colors.cpp
src/vision_opencv/cv_bridge/test/: CMakeLists.txt  conversions.py  enumerants.py  python_bindings.py  test_compression.cpp  test_dynamic_scaling.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
src/vision_opencv/image_geometry/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/vision_opencv/image_geometry/doc/: conf.py  index.rst  (+1 more)
src/vision_opencv/opencv_tests/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/vision_opencv/vision_opencv/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+124 files in other folders)
