<?xml version="1.0"?>
<package format="3">
  <name>drone_control</name>
  <version>0.0.0</version>
  <description>无人机控制包</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- 编译工具依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 核心ROS依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <!-- 自定义服务依赖 -->
  <depend>drone_control_interfaces</depend>

  <!-- Gazebo桥接 -->
  <depend>ros_gz_bridge</depend>

  <!-- MAVSDK Python包 -->
  <depend>mavsdk</depend>

  <!-- OpenCV Python绑定 -->
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>

  <!-- PaddleOCR依赖 -->
  <depend>paddlepaddle</depend>
  <depend>paddleocr</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
