<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plate_detection</name>
  <version>0.0.1</version>
  <description>中文车牌检测识别ROS2节点</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <!-- 依赖drone_control_interfaces包 -->
  <depend>drone_control_interfaces</depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>